--- a/mis_gastos/billetera/templates/billetera.html
+++ b/mis_gastos/billetera/templates/billetera.html
@@ -21,9 +21,11 @@
         <h1 id="titulo_billeteras">Mis billeteras:</h1>
         <ul>
         {% for billetera in mis_billeteras %}
-        
-            <li class="elemento_lista_container" id="nombre_billetera"><a href="/billetera/{{billetera.id}}">~ {{billetera}}</a></li>
-        
+            <div class="contenedor_billeteras">
+                <li class="elemento_lista_container" id="nombre_billetera"><a href="/billetera/{{billetera.id}}">~ {{billetera}}</a></li>
+                <a class="eliminar_billetera" href="/billetera/eliminar_billetera/{{billetera.pk}}">❌</a>
+                <a class="modificar_billetera" href="">✏️</a>
+            </div>
         {% endfor %}
         </ul>
     </div>
