Incorporated filter that allows users only to see their own information

--- a/mis_gastos/billetera/templates/crear_billetera.html
+++ b/mis_gastos/billetera/templates/crear_billetera.html
@@ -19,9 +19,22 @@
     
     <div class="contenido">
         <h1 id="titulo_crear_billetera">Crea tu nueva billetera...</h1>
-        <form method="POST">
+
+        <form method="POST" action="{% url 'crear_billetera' %}">
             {% csrf_token %} 
-            {{form}}
+            <label for="nombre_billetera">Nombre billetera:</label>
+            <input type="text" name="nombre_billetera" id="total_dinero" required>
+
+            <label for="total_dinero">Cantidad dinero:</label>
+            <input type="number" name="total_dinero" id="total_dinero" required>
+            
+            <label for="ahorro_id">Ahorro asociado</label>
+            <select name="ahorro_id" id="ahorro_id">
+                {% for ahorro in ahorros %}
+                    <option value="{{ahorro.pk}}">{{ahorro.nombre_ahorro}}</option>
+                {% endfor %}
+            </select>
+
             <button id="boton_crear_billetera">
                 Save
             </button>
