--- a/mis_gastos/home/templates/login.html
+++ b/mis_gastos/home/templates/login.html
@@ -9,7 +9,7 @@
     <title>login_register</title>
 </head>
 <body>
-
+    {% if request.user.is_authenticated == False %}
     <div class="contenido" id="formulario_crear_ahorro">
         <h1 id="titulo_crear_ahorro">T.C.P.I, tu contador profesional inteligente</h1>
         {% if messages %}
@@ -31,6 +31,9 @@
             <input type="submit" value="Login">
         </form>
     </div>
-
+    <a href="{% url 'register' %}">¿Aún no tienes una cuenta?</a>
+    {% else %}
+    <p>Ya tienes un inicio de sesión</p>
+    {% endif %}
 </body>
 </html>
