--- a/mis_gastos/home/templates/register.html
+++ b/mis_gastos/home/templates/register.html
@@ -9,7 +9,7 @@
     <title>login_register</title>
 </head>
 <body>
-
+    {% if request.user.is_authenticated == False %}
     <div class="contenido" id="formulario_crear_ahorro">
         <h1 id="titulo_crear_ahorro">Crea tu usuario</h1>
         <form method="POST" action="">
@@ -18,6 +18,9 @@
             <input type="submit" value="Register">
         </form>
     </div>
-
+    <a href="{% url 'login' %}">¿Ya tienes una cuenta?</a>
+    {% else %}
+    <p>Ya tienes un inicio de sesión</p>
+    {% endif %}
 </body>
 </html>
