--- a/mis_gastos/home/templates/login.html
+++ b/mis_gastos/home/templates/login.html
@@ -11,7 +11,7 @@
 <body>
     {% if request.user.is_authenticated == False %}
     <div class="contenido" id="formulario_crear_ahorro">
-        <h1 id="titulo_crear_ahorro">T.C.P.I, tu contador profesional inteligente</h1>
+        <h1 id="titulo_crear_ahorro">ContabiliApp</h1>
         {% if messages %}
             {% for message in messages %}
             <ul class="messages">
