--- a/mis_gastos/ahorros/static/styles/estilos_ahorros.css
+++ b/mis_gastos/ahorros/static/styles/estilos_ahorros.css
@@ -1,7 +1,7 @@
 :root{
-    --color1:#35bcbf;
-    --color2: #90f6d7;
-    --color3: #283739;
+    --color1:#0b0633;
+    --color2: #e3f6f5;
+    --color3:  #ff4949;
     --color4:#ffffff;
     --color5:black;
     --color6: white;
@@ -44,31 +44,37 @@ body{
 .li1{
     grid-column:1/2;
     grid-row: 2/3;
+    justify-self: center;
 }
 
 .li2{
     grid-column:2/3;
     grid-row: 2/3;
+    justify-self: center;
 }
 
 .li3{
     grid-column:3/4;
     grid-row: 2/3;
+    justify-self: center;
 }
 
 .li4{
     grid-column:4/5;
     grid-row: 2/3;
+    justify-self: center;
 }
 
 .li5{
     grid-column:5/6;
     grid-row: 2/3;
+    justify-self: center;
 }
 
 .li6{
     grid-column:6/7;
     grid-row: 2/3;
+    justify-self: center;
 }
 
 
@@ -115,8 +121,10 @@ table{
 }
 
 .crear{
-    grid-column:8/9;
+    grid-column:7/8;
     grid-row: 2/3;
+    font-family:cursive;
+    font-size:x-small;
 }
 
 
@@ -449,7 +457,7 @@ select{
 
 #link_ahorro{
     text-decoration:none;
-    color:var(--color3);
+    color:var(--color1);
     font-weight: 1000;
     font-size:large;
 }
@@ -605,5 +613,52 @@ select{
 .modificar_ahorro{
     text-decoration:none;
     grid-column:3/4;
+}
+
+/* Estilos de menú desplegable de user */
+.dropdown {
+    grid-row:2/3;
+    grid-column:8/9;
+    display: inline-block;
+    position: relative;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    width: 80%;
+    overflow: auto;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+    background-color: var(--color4);
+  }
+  .dropdown-content a {
+    display: block;
+    color: #000000;
+    padding: 5px;
+    text-decoration: none;
+  }
+  .dropdown-content a:hover {
+    color: #FFFFFF;
+    background-color: #00A4BD;
+  }
+
+  .user_image{
+    width:30px;
+    height:30px;
+  }
+
+.username{
+    grid-row: 2/3;
+    grid-column: 7/8;
+    font-family:cursive;
+    font-size:x-small;
+}
+
+.logo_contabiliapp{
+    width:250px;
+    height:80px;
+    
 }
 
