--- a/mis_gastos/home/templates/register.html
+++ b/mis_gastos/home/templates/register.html
@@ -1,12 +1,12 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static '/styles/estilos_login.css' %}">
-    <title>login_register</title>
+    <title>register</title>
 </head>
 <body>
     {% if request.user.is_authenticated == False %}
@@ -14,7 +14,7 @@
         <h1 id="titulo_crear_ahorro">Crea tu usuario</h1>
         <form method="POST" action="">
             {% csrf_token %}
-            {{UserCreationForm}}
+            {{UserCreationForm|crispy}}
             <input type="submit" value="Register">
         </form>
     </div>
