--- a/mis_gastos/home/templates/login.html
+++ b/mis_gastos/home/templates/login.html
@@ -26,12 +26,12 @@
             
             <div class="username_container">
                 <label id="username_label" for="username">Username</label>
-                <input id="username_input" type="text" name="username" placeholder="Enter username" required>
+                <input id="username_input" type="text" name="username" required>
             </div>
 
             <div class="password_container">
                 <label id="password_label" for="password">Password</label>
-                <input id="password_input" type="password" name="password" placeholder="Enter password" required>
+                <input id="password_input" type="password" name="password" required>
             </div>
 
             <div class="contenedor_submit_link_registro">
