making the code less hardcoded

--- a/mis_gastos/ahorros/static/styles/estilos_ahorros.css
+++ b/mis_gastos/ahorros/static/styles/estilos_ahorros.css
@@ -45,36 +45,42 @@ body{
     grid-column:1/2;
     grid-row: 2/3;
     justify-self: center;
+    font-family: monospace;
 }
 
 .li2{
     grid-column:2/3;
     grid-row: 2/3;
     justify-self: center;
+    font-family: monospace;
 }
 
 .li3{
     grid-column:3/4;
     grid-row: 2/3;
     justify-self: center;
+    font-family: monospace;
 }
 
 .li4{
     grid-column:4/5;
     grid-row: 2/3;
     justify-self: center;
+    font-family: monospace;
 }
 
 .li5{
     grid-column:5/6;
     grid-row: 2/3;
     justify-self: center;
+    font-family: monospace;
 }
 
 .li6{
     grid-column:6/7;
     grid-row: 2/3;
     justify-self: center;
+    font-family: monospace;
 }
 
 
@@ -123,7 +129,7 @@ table{
 .crear{
     grid-column:7/8;
     grid-row: 2/3;
-    font-family:cursive;
+    font-family:monospace;
     font-size:x-small;
 }
 
