--- a/mis_gastos/ahorros/templates/ahorros.html
+++ b/mis_gastos/ahorros/templates/ahorros.html
@@ -1,29 +1,16 @@
+{% extends 'main/ahorros_main.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static '/styles/estilos_ahorros.css' %}">
-    <title>ahorros</title>
-</head>
-<body>
-    <nav class="navbar">
-        <ul class="nav_container">
-            <li class="li1"><a href="/home">Home</a></li>
-            <li class="li2"><a class="link_pagina_actual" href="/ahorros">Ahorros</a></li>
-            <li class="li3"><a href="/billetera">Billeteras</a></li>
-            <li class="crear"><a href={% url 'crear_ahorro' %}>Crear ahorro</a></li>
-            <div class="dropdown">
-                <button class="contenedor_user_image"><img class="user_image" src="{% static 'user_image.png' %}" alt="user_image"></button>
-                <div class="dropdown-content">
-                <a href="/home/logout">Logout</a>
-                </div>
-            </div>
-        </ul>
-    </nav>
+
+{% block link %}<link rel="stylesheet" href="{% static '/styles/estilos_ahorros.css' %}">{% endblock link %}
+{% block title %}<title>ahorros</title>{% endblock title %}
     
+    
+
+    {% block nav_items %}
+    <li class="crear"><a href={% url 'crear_ahorro' %}>Crear ahorro</a></li>
+    {% endblock %}
+    
+    {% block content %}
     <div class="contenido" id="contenedor_ahorros">
         <h1 id="titulo_ahorros">Ahorros...</h1>
         <h2 id="subtitulo_ahorros">Tus ahorros son:</h2>
@@ -38,7 +25,6 @@
                 {% endfor %}
         </ul>
     </div>
-</body>
-</html>
+    {% endblock content %}
 
 
