--- a/mis_gastos/home/templates/login.html
+++ b/mis_gastos/home/templates/login.html
@@ -36,7 +36,7 @@
 
             <div class="contenedor_submit_link_registro">
                 <input id="login_input_submit" type="submit" value="Login">
-                <a id="link_registro" href="{% url 'register' %}">¿Aún no tienes una cuenta?</a>
+                <a id="link_registro" href="{% url 'home:register' %}">¿Aún no tienes una cuenta?</a>
             </div>
         </form>
         
