--- a/mis_gastos/home/templates/register.html
+++ b/mis_gastos/home/templates/register.html
@@ -18,7 +18,7 @@
             <input type="submit" value="Register">
         </form>
     </div>
-    <a href="{% url 'login' %}">¿Ya tienes una cuenta?</a>
+    <a href="{% url 'home:login' %}">¿Ya tienes una cuenta?</a>
     {% else %}
     <p>Ya tienes un inicio de sesión</p>
     {% endif %}
