--- a/mis_gastos/ahorros/templates/ahorro_actual.html
+++ b/mis_gastos/ahorros/templates/ahorro_actual.html
@@ -1,22 +1,15 @@
+{% extends 'main/ahorros_main.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href= "{% static '/styles/estilos_ahorros.css' %}">
-    <title>ahorro_actual</title>
-</head>
-<body>
-    <nav class="navbar">
-        <ul class="nav_container">
-            <li class="li1"><a href="/ahorros">Ahorros</a></li>
-            <li class="li2"><a href="/billetera">Billeteras</a></li>
-            <li class="crear"><a href="/ahorros/{{ahorro.pk}}/crear_inversion">Crear inversión</a></li>
-        </ul>
-    </nav>
+
+{% block link %}<link rel="stylesheet" href= "{% static '/styles/estilos_ahorros.css' %}">{% endblock link %}
+{% block title %}<title>ahorro_actual</title>{% endblock title %}
     
+
+    {% block nav_items %}
+    <li class="crear"><a href="/ahorros/{{ahorro.pk}}/crear_inversion">Crear inversión</a></li>
+    {% endblock nav_items %}
+    
+    {% block content %}
     <h1 id="titulo_ahorro_actual">{{ahorro.nombre_ahorro}}</h1>
     <div id="contenido_ahorro_actual">
         <div id="contenedor_info_ahorro">
@@ -63,5 +56,4 @@
 
         
     </div>
-</body>
-</html>
+    {% endblock content %}
