--- a/mis_gastos/billetera/templates/ingresos_gastos.html
+++ b/mis_gastos/billetera/templates/ingresos_gastos.html
@@ -1,28 +1,18 @@
+{% extends 'main/billetera_main.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static '/styles/main.css' %}">
-    <title>ingresos_gastos</title>
-</head>
-<body>
-    <nav class="navbar">
-        <ul class="nav_container">
-            <li class="li1">
-                <a href="/billetera">Billeteras</a>
-            </li>
-            <li class="li2">
-                <a href="/billetera/{{billetera.pk}}">Billetera actual</a>
-            </li>
-            <li class="crear">
-                <a href="/billetera/{{billetera.pk}}/{{tipo_categoria}}/crear_categoria">Crear categoría</a>
-            </li>
-        </ul>
-    </nav>
+
+    {% block link %}<link rel="stylesheet" href="{% static '/styles/main.css' %}">{% endblock link %}
+    {% block title %}<title>ingresos_gastos</title>{% endblock title %}
     
+    
+
+    {% block nav_items %}
+        <li class="crear">
+            <a href="/billetera/{{billetera.pk}}/{{tipo_categoria}}/crear_categoria">Crear categoría</a>
+        </li>
+    {% endblock nav_items %}
+    
+    {% block content %}
     <div class="contenido" id="contenedor_categorias">
         <h1 id="titulo_mis_categorias">Billetera {{billetera.nombre_billetera}}</h1>
         <h2 id="subtitulo_mis_categorias">Mis categorías de {{tipo_categoria}}...</h2>
@@ -38,6 +28,5 @@
             {% endfor %}
         </ul>
     </div>
-</body>
-</html>
+    {% endblock content %}
 
