--- a/mis_gastos/home/static/styles/home_styles.css
+++ b/mis_gastos/home/static/styles/home_styles.css
@@ -6,75 +6,15 @@
     --color5:black;
     --color6: white;
     --color7: #A72AAB;
+    --color8:whitesmoke;
 }
 
 body{
-    background-color:var(--color4);
+    background-color:var(--color8);
     width:95vw;
     padding:0;
+    margin: 0%;
 }
-
-.nav_container{
-    background-color:var(--color1);
-    color:var(--color5);
-    display: grid;
-    width:96vw;
-    height:70px;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 25% 50% 25%;
-    margin:0;
-}
-
-
-.navbar li{
-    list-style: none;
-}
-
-
-.navbar a{
-    text-decoration:none;
-    color:var(--color6);
-    font-size:large;
-}
-
-.navbar a:hover{
-    color:var(--color3)
-}
-
-.li1{
-    grid-column:1/2;
-    grid-row: 2/3;
-    justify-self: center;
-}
-
-.li2{
-    grid-column:2/3;
-    grid-row: 2/3;
-    justify-self: center;
-}
-
-.li3{
-    grid-column:3/4;
-    grid-row: 2/3;
-    justify-self: center;
-}
-
-.li4{
-    grid-column:4/5;
-    grid-row: 2/3;
-    justify-self: center;
-}
-
-.li5{
-    grid-column:5/6;
-    grid-row: 2/3;
-}
-
-.li6{
-    grid-column:6/7;
-    grid-row: 2/3;
-}
-
 
 .contenido{
     margin-top:50px;
@@ -677,7 +617,7 @@ select{
 .username{
     grid-row: 2/3;
     grid-column: 7/8;
-    font-family:cursive;
+    font-family:monospace;
     font-size:x-small;
 }
 
@@ -685,4 +625,21 @@ select{
     width:250px;
     height:80px;
     
+}
+
+/* specific styles for home page */
+#contenido_home{
+    margin-left:10%;
+}
+
+.titulo_pregunta_home{
+    font-family:monospace;
+}
+
+.parrafo_home{
+    font-family:monospace;
+}
+
+.elemento_lista_home{
+    font-family:monospace;
 }
